Fix logic to show/hide bullet point between release date and runtime in MovieDetails and TvDetails

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -98,7 +98,7 @@
 
                                 <TextView
                                     style="@style/BriefDetailBody"
-                                    isVisible="@{viewModel.details.releaseDate.empty || viewModel.details.runtime != 0}"
+                                    isVisible="@{!viewModel.details.releaseDate.empty &amp;&amp; viewModel.details.runtime != 0}"
                                     android:layout_marginStart="6dp"
                                     android:layout_marginEnd="6dp"
                                     android:text="@string/bullet_point" />
